Define global pathways based on CWD

--- a/SafeJustEarthSysBnd_MinAccessGW_CUNY-Griffith2022-23.ipynb
+++ b/SafeJustEarthSysBnd_MinAccessGW_CUNY-Griffith2022-23.ipynb
@@ -178,14 +178,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main = '/Users/pamelagreen/Desktop/Data/'\n",
+    "main = os.getcwd( ) + '/'\n",
     "\n",
-    "out_dir = str(main) + 'Griffith2022/'\n",
-    "TCdirMain = str(main) + 'TerraClimate/'\n",
-    "TCdir = str(main) + 'TerraClimate/wbm/'\n",
+    "in_dir = str(main) + 'ModelInput/'\n",
+    "out_dir = str(main) + 'ModelOutput/'\n",
     "\n",
-    "cellarea = str(main) + 'cellarea/CellArea_6m.tif'\n",
-    "upAreafile= str(main) + 'cellarea/Global_UpstreamAreakm2_6min.tif'"
+    "TCdirMain = str(in_dir) + 'TerraClimate/'\n",
+    "TCdir = str(in_dir) + 'TerraClimate/wbm/'\n",
+    "pop_dir = str(in_dir) + 'population/'\n",
+    "\n",
+    "cellarea = str(in_dir) + 'cellarea/CellArea_6m.tif'\n",
+    "upAreafile= str(in_dir) + 'cellarea/Global_UpstreamAreakm2_6min.tif'"
    ]
   },
   {
@@ -237,19 +240,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fin = str(out_dir) + 'RiverBasin/HydroSTN06_Subbasin.tif'\n",
+    "fin = str(in_dir) + 'RiverBasin/HydroSTN06_Subbasin.tif'\n",
     "ds = gdal.Open(str(fin))\n",
     "subbas = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
     "\n",
     "del ds\n",
     "\n",
-    "fin = str(out_dir) + 'RiverBasin/Global_Basin_HydroSTN30_06min_GHAAS3.tif'\n",
+    "fin = str(in_dir) + 'RiverBasin/Global_Basin_HydroSTN30_06min_GHAAS3.tif'\n",
     "ds = gdal.Open(str(fin))\n",
     "basin = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
     "basin[np.isnan(basin)] = 0\n",
     "\n",
     "basin_name_file = 'MajorBasinLookUp.xlsx'\n",
-    "pd_basin_name = pd.read_excel(out_dir + 'RiverBasin/' + basin_name_file, sheet_name='LookupVALUES')\n",
+    "pd_basin_name = pd.read_excel(in_dir + 'RiverBasin/' + basin_name_file, sheet_name='LookupVALUES')\n",
     "del pd_basin_name['BasinName']\n",
     "del pd_basin_name['CONTINENT']\n",
     "del pd_basin_name['SEA']\n",
@@ -270,7 +273,7 @@
     "sum_basin_area = scipy.ndimage.sum(CellArea, basin, basin)\n",
     "sum_area = scipy.ndimage.sum(CellArea, subbas, subbas)\n",
     "\n",
-    "fin = out_dir + 'UpRO/flow_mask.tif'\n",
+    "fin = in_dir + 'UpRO/flow_mask.tif'\n",
     "ds = gdal.Open(str(fin))\n",
     "flow_mask = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
     "flow_mask[np.isnan(flow_mask)] = 0\n",
@@ -311,7 +314,7 @@
     "\n",
     "# Saved discharge from earlier - newer discharge is unsurprisingly different.\n",
     "\n",
-    "savedQ_dir = str(out_dir) + 'OUTPUTQ_LTM/'\n",
+    "savedQ_dir = str(in_dir) + 'OUTPUTQ_LTM/'\n",
     "\n",
     "filepath = savedQ_dir + 'WBM_TerraClimate_OUTPUTQ_PRIST_aLTM_2000-2020.tif'\n",
     "dataset = gdal.Open(filepath)\n",
@@ -357,7 +360,7 @@
     "EndYear=2020\n",
     "reso = '6min'\n",
     "\n",
-    "savedCV_dir = str(out_dir) + 'CV-CDF/'\n",
+    "savedCV_dir = str(in_dir) + 'CV-CDF/'\n",
     "\n",
     "fin = savedCV_dir + 'WBM_TerraClimate' + str(StartYear) + '-' + str(EndYear) + '_Q_DIST_CV_InterAnnual_' + str(reso) + '.tif'\n",
     "ds = gdal.Open(str(fin))\n",
@@ -392,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "infn = str(out_dir) + 'Groundwater/RiskMap_6m.tif'\n",
+    "infn = str(in_dir) + 'Groundwater/RiskMap_6m.tif'\n",
     "\n",
     "ds = gdal.Open(str(infn))\n",
     "gw_mm = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
@@ -403,7 +406,7 @@
     "sum_basin_gwkm3 = scipy.ndimage.sum(gw_km3, basin, basin)\n",
     "sum_gwkm3 = scipy.ndimage.sum(gw_km3, subbas, subbas)\n",
     "\n",
-    "infn = str(out_dir) + 'Groundwater/Recharge_6m.tif'\n",
+    "infn = str(in_dir) + 'Groundwater/Recharge_6m.tif'\n",
     "ds = gdal.Open(str(infn))\n",
     "gwr = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
     "gwr[np.isnan(gwr)] = 0\n",
@@ -415,10 +418,10 @@
     "sum_basin_gwrkm3 = scipy.ndimage.sum(gwr_km3, basin, basin)\n",
     "sum_gwrkm3 = scipy.ndimage.sum(gwr_km3, subbas, subbas)\n",
     "\n",
-    "outname = out_dir + 'Groundwater/RechargeVol_6m.tif'\n",
+    "outname = in_dir + 'Groundwater/RechargeVol_6m.tif'\n",
     "save2File(gwr_km3[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
     "\n",
-    "infn = str(out_dir) + 'Groundwater/RechargeTrend_mm_yr_6m.tif'\n",
+    "infn = str(in_dir) + 'Groundwater/RechargeTrend_mm_yr_6m.tif'\n",
     "\n",
     "ds = gdal.Open(str(infn))\n",
     "gwTrend = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
@@ -432,7 +435,7 @@
     "sum_basin_gwTrendkm3 = scipy.ndimage.sum(gwTrend_km3, basin, basin)\n",
     "sum_gwTrendkm3 = scipy.ndimage.sum(gwTrend_km3, subbas, subbas)\n",
     "\n",
-    "outname = out_dir + 'Groundwater/RechargeDepthTrendVolkm3_6m.tif'\n",
+    "outname = in_dir + 'Groundwater/RechargeDepthTrendVolkm3_6m.tif'\n",
     "save2File(gwTrend_km3[:, :], outname, nrows6m, ncols6m, geotr6m)"
    ]
   },
@@ -456,13 +459,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fin = str(main) + 'population/gpw4/6min/gpw_v4_population_count_rev11_2020_6min.tif'\n",
+    "fin = str(pop_dir) + 'gpw4/gpw_v4_population_count_rev11_2020_6min.tif'\n",
     "ds = gdal.Open(str(fin))\n",
     "pop2020 = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
     "pop2020[np.isnan(pop2020)] = 0\n",
     "pop2020 = pop2020[ :-n, :]\n",
     "\n",
-    "fin = str(main) + 'population/dwnpop/6min/dwnpop_2020_gpwv4_TerraClimate_aLTM2000-2020_6min.tif'\n",
+    "fin = str(pop_dir) + 'dwnpop/dwnpop_2020_gpwv4_TerraClimate_aLTM2000-2020_6min.tif'\n",
     "ds = gdal.Open(str(fin))\n",
     "dwnpop2020 = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
     "dwnpop2020[np.isnan(dwnpop2020)] = 0\n",
@@ -571,36 +574,36 @@
     "Unmet_sw_deficit_all_capability_GWTrendNeg_loc = np.where(gwTrend_km3 < 0, unmet_sw_deficit_all_capability_loc, 0)\n",
     "DwnPop_Unmet_sw_deficit_all_capability_GWTrendNeg_loc = np.where(Unmet_sw_deficit_all_capability_GWTrendNeg_loc > 0, target_pop, 0)\n",
     "\n",
-    "outname = out_dir + 'ModelOutput/dom_dignity_loc.tif'\n",
+    "outname = out_dir + 'dom_dignity_loc.tif'\n",
     "save2File(dom_dignity_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/dom_capability_loc.tif'\n",
+    "outname = out_dir + 'dom_capability_loc.tif'\n",
     "save2File(dom_capability_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/all_dignity_loc.tif'\n",
+    "outname = out_dir + 'all_dignity_loc.tif'\n",
     "save2File(all_dignity_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/all_capability_loc.tif'\n",
+    "outname = out_dir + 'all_capability_loc.tif'\n",
     "save2File(all_capability_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
     "\n",
-    "outname = out_dir + 'ModelOutput/sw_deficit_dom_dignity_loc.tif'\n",
+    "outname = out_dir + 'sw_deficit_dom_dignity_loc.tif'\n",
     "save2File(sw_deficit_dom_dignity_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/sw_deficit_dom_capability_loc.tif'\n",
+    "outname = out_dir + 'sw_deficit_dom_capability_loc.tif'\n",
     "save2File(sw_deficit_dom_capability_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/sw_deficit_all_dignity_loc.tif'\n",
+    "outname = out_dir + 'sw_deficit_all_dignity_loc.tif'\n",
     "save2File(sw_deficit_all_dignity_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/sw_deficit_all_capability_loc.tif'\n",
+    "outname = out_dir + 'sw_deficit_all_capability_loc.tif'\n",
     "save2File(sw_deficit_all_capability_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
     "\n",
-    "outname = out_dir + 'ModelOutput/gw_recharge_loc.tif'\n",
+    "outname = out_dir + 'gw_recharge_loc.tif'\n",
     "save2File(gw_recharge_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/gw_drawdown_loc.tif'\n",
+    "outname = out_dir + 'gw_drawdown_loc.tif'\n",
     "save2File(gw_drawdown_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
     "\n",
-    "outname = out_dir + 'ModelOutput/unmet_sw_deficit_dom_dignity_loc.tif'\n",
+    "outname = out_dir + 'unmet_sw_deficit_dom_dignity_loc.tif'\n",
     "save2File(unmet_sw_deficit_dom_dignity_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/unmet_sw_deficit_dom_capability_loc.tif'\n",
+    "outname = out_dir + 'unmet_sw_deficit_dom_capability_loc.tif'\n",
     "save2File(unmet_sw_deficit_dom_capability_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/unmet_sw_deficit_all_dignity_loc.tif'\n",
+    "outname = out_dir + 'unmet_sw_deficit_all_dignity_loc.tif'\n",
     "save2File(unmet_sw_deficit_all_dignity_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/unmet_sw_deficit_all_capability_loc.tif'\n",
+    "outname = out_dir + 'unmet_sw_deficit_all_capability_loc.tif'\n",
     "save2File(unmet_sw_deficit_all_capability_loc[:, :], outname, nrows6m, ncols6m, geotr6m)\n"
    ]
   },
@@ -680,31 +683,31 @@
     "Unmet_sw_deficit_all_capability_GWTrendNeg_locup = np.where(gwTrend_km3 < 0, unmet_sw_deficit_all_capability_locup, 0)\n",
     "DwnPop_Unmet_sw_deficit_all_capability_GWTrendNeg_locup = np.where(Unmet_sw_deficit_all_capability_GWTrendNeg_locup > 0, target_pop, 0)\n",
     "\n",
-    "outname = out_dir + 'ModelOutput/dom_dignity_locup.tif'\n",
+    "outname = out_dir + 'dom_dignity_locup.tif'\n",
     "save2File(dom_dignity_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/dom_capability_locup.tif'\n",
+    "outname = out_dir + 'dom_capability_locup.tif'\n",
     "save2File(dom_capability_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/all_dignity_locup.tif'\n",
+    "outname = out_dir + 'all_dignity_locup.tif'\n",
     "save2File(all_dignity_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/all_capability_locup.tif'\n",
+    "outname = out_dir + 'all_capability_locup.tif'\n",
     "save2File(all_capability_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
     "\n",
-    "outname = out_dir + 'ModelOutput/sw_deficit_dom_dignity_locup.tif'\n",
+    "outname = out_dir + 'sw_deficit_dom_dignity_locup.tif'\n",
     "save2File(sw_deficit_dom_dignity_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/sw_deficit_dom_capability_locup.tif'\n",
+    "outname = out_dir + 'sw_deficit_dom_capability_locup.tif'\n",
     "save2File(sw_deficit_dom_capability_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/sw_deficit_all_dignity_locup.tif'\n",
+    "outname = out_dir + 'sw_deficit_all_dignity_locup.tif'\n",
     "save2File(sw_deficit_all_dignity_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/sw_deficit_all_capability_locup.tif'\n",
+    "outname = out_dir + 'sw_deficit_all_capability_locup.tif'\n",
     "save2File(sw_deficit_all_capability_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
     "\n",
-    "outname = out_dir + 'ModelOutput/unmet_sw_deficit_dom_dignity_locup.tif'\n",
+    "outname = out_dir + 'unmet_sw_deficit_dom_dignity_locup.tif'\n",
     "save2File(unmet_sw_deficit_dom_dignity_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/unmet_sw_deficit_dom_capability_locup.tif'\n",
+    "outname = out_dir + 'unmet_sw_deficit_dom_capability_locup.tif'\n",
     "save2File(unmet_sw_deficit_dom_capability_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/unmet_sw_deficit_all_dignity_locup.tif'\n",
+    "outname = out_dir + 'unmet_sw_deficit_all_dignity_locup.tif'\n",
     "save2File(unmet_sw_deficit_all_dignity_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n",
-    "outname = out_dir + 'ModelOutput/unmet_sw_deficit_all_capability_locup.tif'\n",
+    "outname = out_dir + 'unmet_sw_deficit_all_capability_locup.tif'\n",
     "save2File(unmet_sw_deficit_all_capability_locup[:, :], outname, nrows6m, ncols6m, geotr6m)\n"
    ]
   },
@@ -818,7 +821,7 @@
     "#Build Basin Tables\n",
     "#################################\n",
     "\n",
-    "shp_filename = out_dir + 'RiverBasin/HydroSTN06_BasinMouth.shp'\n",
+    "shp_filename = in_dir + 'RiverBasin/HydroSTN06_BasinMouth.shp'\n",
     "ds=ogr.Open(shp_filename)\n",
     "lyr=ds.GetLayer()\n",
     "\n",
@@ -951,7 +954,7 @@
     "df = pd.merge(df, df23, on=['ID'])\n",
     "\n",
     "\n",
-    "filenmXL = out_dir + 'ModelOutput/Tables/BASIN_MinAccess_GWr.xlsx'\n",
+    "filenmXL = out_dir + 'BASIN_MinAccess_GWr.xlsx'\n",
     "with pd.ExcelWriter(filenmXL) as writer:\n",
     "    df.to_excel(writer, index=False, sheet_name='Basin_Frac_ALL', header=['ID', 'Basin Name', 'Basin Area (km2)', \n",
     "                                                                          'Pristine Discharge (km3/yr)', 'Available Pristine Discharge (km3/yr)', 'Contemporary Discharge (km3/yr)', \n",
