Intro text edit

--- a/SafeJustEarthSysBnd_MinAccessGW_CUNY-Griffith2022-23.ipynb
+++ b/SafeJustEarthSysBnd_MinAccessGW_CUNY-Griffith2022-23.ipynb
@@ -5,17 +5,17 @@
    "id": "soviet-blogger",
    "metadata": {},
    "source": [
-    "# Safe and Just Earth Systems Boundaries for Surface Water: Safe Water Boundaries for Minimum Access and Groundwater\n",
+    "# Safe and Just Earth Systems Boundaries for Blue Water: Safe Water Boundaries for Minimum Access and Groundwater\n",
     "\n",
     "***\n",
     "<font color=red>Title: Safe and Just Earth Systems Boundaries for Surface Water: Safe Water Boundaries for Minimum Access and Groundwater  \n",
     "Author: Pamela A. Green  \n",
-    "Date: February 14, 2023  \n",
+    "Date: April 19, 2023  \n",
     "\n",
     "This code was developed between December 1, 2021 and February 14, 2023 by Pamela Green, Senior Research Associate, CUNY Advanced Science Research Center, New York, NY under subcontract to Griffith University.  </font>\n",
     "***\n",
     "\n",
-    "This code represents spatial modelling for development of the safe and just surface water target for Working Group 3 of the Earth Commission for the Earth Commission Long Report and the <i><b>\"NAME OF PUBLICATIONS\"</b></i> publication. The surface water target includes spatial analysis of population, hydrological alteration and groundwater decline for the analysis of surface just access to surface water.\n",
+    "This code represents spatial modelling for development of the safe and just surface water target for Working Group 3 of the Earth Commission for the Earth Commission Long Report and the <i><b>\"How can we live within the safe and just Earth system boundaries for blue water?\"</b></i> publication. The surface water target includes spatial analysis of population, hydrological alteration and groundwater decline for the analysis of surface just access to surface water.\n",
     "\n",
     "Safe water deficits are defined as the difference between water demand metrics and available surface water. Available surface water is defined as the amount of flow minus what is needed to support natural systems and is calculated as 20% of the long term mean annual pristine discharge volume. Safe water demands are defined by four metrics expressed as volume of demand per capita (Table below). Safe water demands are converted to spatially distributed gridded volumes by multiplying the demand metrics by a distributed population dataset for year 2020 (CIESIN 2018) and then summed over river basins. Long term mean annual discharge and available surface water discharge at basin mouth is used to define integrated water flows for the river basins.\n",
     "\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "inclusive-integrity",
    "metadata": {},
    "outputs": [],
@@ -77,6 +77,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy\n",
+    "import os\n",
     "\n",
     "from scipy import stats\n",
     "from osgeo import gdal, gdal_array, osr, ogr\n",
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "peripheral-lighter",
    "metadata": {},
    "outputs": [],
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "generic-glucose",
    "metadata": {},
    "outputs": [],
@@ -173,22 +174,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "radio-meeting",
    "metadata": {},
    "outputs": [],
    "source": [
     "main = os.getcwd( ) + '/'\n",
     "\n",
-    "in_dir = str(main) + 'ModelInput/'\n",
-    "out_dir = str(main) + 'ModelOutput/'\n",
+    "in_dir = str(main) + 'Model_Input/'\n",
+    "out_dir = str(main) + 'Model_Output/'\n",
     "\n",
-    "TCdirMain = str(in_dir) + 'TerraClimate/'\n",
-    "TCdir = str(in_dir) + 'TerraClimate/wbm/'\n",
+    "# TCdirMain = str(in_dir) + 'TerraClimate/'\n",
+    "# TCdir = str(in_dir) + 'TerraClimate/wbm/'\n",
     "pop_dir = str(in_dir) + 'population/'\n",
     "\n",
-    "cellarea = str(in_dir) + 'cellarea/CellArea_6m.tif'\n",
-    "upAreafile= str(in_dir) + 'cellarea/Global_UpstreamAreakm2_6min.tif'"
+    "cellarea = str(in_dir) + 'landocean/CellArea_6m.tif'\n",
+    "upAreafile= str(in_dir) + 'landocean/Global_UpstreamAreakm2_6min.tif'\n",
+    "ocean = str(in_dir) + 'landocean/ocean.tif'"
    ]
   },
   {
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "perfect-sharing",
    "metadata": {},
    "outputs": [],
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "incredible-sodium",
    "metadata": {},
    "outputs": [],
@@ -273,12 +275,12 @@
     "sum_basin_area = scipy.ndimage.sum(CellArea, basin, basin)\n",
     "sum_area = scipy.ndimage.sum(CellArea, subbas, subbas)\n",
     "\n",
-    "fin = in_dir + 'UpRO/flow_mask.tif'\n",
+    "fin = in_dir + 'landocean/flow_mask.tif'\n",
     "ds = gdal.Open(str(fin))\n",
     "flow_mask = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
     "flow_mask[np.isnan(flow_mask)] = 0\n",
     "\n",
-    "fin = str(TCdirMain) + '/ocean.tif'\n",
+    "fin = str(ocean)\n",
     "ds = gdal.Open(str(fin))\n",
     "ocean = np.array(ds.GetRasterBand(1).ReadAsArray())"
    ]
@@ -305,15 +307,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "spare-essay",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read in LTM WBM data..\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Read in LTM WBM data..\")\n",
-    "\n",
-    "# Saved discharge from earlier - newer discharge is unsurprisingly different.\n",
-    "\n",
     "savedQ_dir = str(in_dir) + 'OUTPUTQ_LTM/'\n",
     "\n",
     "filepath = savedQ_dir + 'WBM_TerraClimate_OUTPUTQ_PRIST_aLTM_2000-2020.tif'\n",
@@ -351,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "hollow-auction",
    "metadata": {},
    "outputs": [],
@@ -380,6 +386,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "decent-taiwan",
+   "metadata": {},
+   "source": [
+    "## Read in Downstream Population, Local Pop scaling from 2020\n",
+    "\n",
+    "Population datasets are from CIESIN GPW4(references below) and were resampled to 6min resolution.\n",
+    "\n",
+    "Contemporary Population:\n",
+    "- Center for International Earth Science Information Network - CIESIN - Columbia University. 2018. Gridded Population of the World, Version 4 (GPWv4): Population Density, Revision 11. Palisades, NY: NASA Socioeconomic Data and Applications Center (SEDAC).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "mysterious-cherry",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fin = str(pop_dir) + 'gpw4/gpw_v4_population_count_rev11_2020_6min.tif'\n",
+    "ds = gdal.Open(str(fin))\n",
+    "pop2020 = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
+    "pop2020[np.isnan(pop2020)] = 0\n",
+    "pop2020 = pop2020[ :-n, :]\n",
+    "\n",
+    "fin = str(pop_dir) + 'dwnpop/dwnpop_2020_gpwv4_TerraClimate_aLTM2000-2020_6min.tif'\n",
+    "ds = gdal.Open(str(fin))\n",
+    "dwnpop2020 = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
+    "dwnpop2020[np.isnan(dwnpop2020)] = 0\n",
+    "\n",
+    "sum_pop2020 = scipy.ndimage.sum(pop2020, subbas, subbas)\n",
+    "sum_dwnpop2020 = scipy.ndimage.sum(dwnpop2020, subbas, subbas)\n",
+    "\n",
+    "sum_basin_pop2020 = scipy.ndimage.sum(pop2020, basin, basin)\n",
+    "sum_basin_dwnpop2020 = scipy.ndimage.sum(dwnpop2020, basin, basin)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "relative-affairs",
    "metadata": {},
    "source": [
@@ -390,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "smoking-updating",
    "metadata": {},
    "outputs": [],
@@ -441,44 +485,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decent-taiwan",
-   "metadata": {},
-   "source": [
-    "## Read in Downstream Population, Local Pop scaling from 2020\n",
-    "\n",
-    "Population datasets are from CIESIN GPW4(references below) and were resampled to 6min resolution.\n",
-    "\n",
-    "Contemporary Population:\n",
-    "- Center for International Earth Science Information Network - CIESIN - Columbia University. 2018. Gridded Population of the World, Version 4 (GPWv4): Population Density, Revision 11. Palisades, NY: NASA Socioeconomic Data and Applications Center (SEDAC).\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "mysterious-cherry",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fin = str(pop_dir) + 'gpw4/gpw_v4_population_count_rev11_2020_6min.tif'\n",
-    "ds = gdal.Open(str(fin))\n",
-    "pop2020 = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
-    "pop2020[np.isnan(pop2020)] = 0\n",
-    "pop2020 = pop2020[ :-n, :]\n",
-    "\n",
-    "fin = str(pop_dir) + 'dwnpop/dwnpop_2020_gpwv4_TerraClimate_aLTM2000-2020_6min.tif'\n",
-    "ds = gdal.Open(str(fin))\n",
-    "dwnpop2020 = np.array(ds.GetRasterBand(1).ReadAsArray())\n",
-    "dwnpop2020[np.isnan(dwnpop2020)] = 0\n",
-    "\n",
-    "sum_pop2020 = scipy.ndimage.sum(pop2020, subbas, subbas)\n",
-    "sum_dwnpop2020 = scipy.ndimage.sum(dwnpop2020, subbas, subbas)\n",
-    "\n",
-    "sum_basin_pop2020 = scipy.ndimage.sum(pop2020, basin, basin)\n",
-    "sum_basin_dwnpop2020 = scipy.ndimage.sum(dwnpop2020, basin, basin)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "round-health",
    "metadata": {},
    "source": [
@@ -517,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "optical-shannon",
    "metadata": {},
    "outputs": [],
@@ -629,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "looking-malpractice",
    "metadata": {},
    "outputs": [],
@@ -742,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "recognized-compilation",
    "metadata": {},
    "outputs": [],
@@ -777,8 +783,10 @@
     "# Calculate Deficit proportion of pristine discharges\n",
     "##########################################\n",
     "\n",
-    "sw_deficit_prop_Prist = (sw_deficit_all_capability / 1000000) / WBMpristQ_ann_km3yr\n",
-    "sw_deficit_prop_AvailPrist = (sw_deficit_all_capability / 1000000) / availWBMpristQ_ann_km3yr\n",
+    "with np.errstate(invalid='ignore'):\n",
+    "    with np.errstate(divide='ignore'):\n",
+    "        sw_deficit_prop_Prist = (sw_deficit_all_capability / 1000000) / WBMpristQ_ann_km3yr\n",
+    "        sw_deficit_prop_AvailPrist = (sw_deficit_all_capability / 1000000) / availWBMpristQ_ann_km3yr\n",
     "\n",
     "##########################################\n",
     "# Groundwater Recharge in Mill L/yr\n",
@@ -808,14 +816,16 @@
     "# Pop Weighted Mean of CV over Basin \n",
     "#################################\n",
     "\n",
-    "tempcal = np.where(flow_mask == 1.0, 0.0, wbmtc_cv_inter) * pop2020\n",
-    "basin_popwgtCVInter = (scipy.ndimage.sum(tempcal, basin, basin) / sum_basin_pop2020 )\n",
+    "with np.errstate(invalid='ignore'):\n",
+    "    with np.errstate(divide='ignore'):\n",
+    "        tempcal = np.where(flow_mask == 1.0, 0.0, wbmtc_cv_inter) * pop2020\n",
+    "        basin_popwgtCVInter = (scipy.ndimage.sum(tempcal, basin, basin) / sum_basin_pop2020 )\n",
     "\n",
-    "tempcal = np.where(flow_mask == 1.0, 0.0, wbmtc_cv_intra) * pop2020\n",
-    "basin_popwgtCVIntra = (scipy.ndimage.sum(tempcal, basin, basin) / sum_basin_pop2020 )\n",
+    "        tempcal = np.where(flow_mask == 1.0, 0.0, wbmtc_cv_intra) * pop2020\n",
+    "        basin_popwgtCVIntra = (scipy.ndimage.sum(tempcal, basin, basin) / sum_basin_pop2020 )\n",
     "\n",
-    "tempcal = np.where(flow_mask == 1.0, 0.0, wbmtc_cv_interintra) * pop2020\n",
-    "basin_popwgtCVInterIntra = (scipy.ndimage.sum(tempcal, basin, basin) / sum_basin_pop2020 )\n",
+    "        tempcal = np.where(flow_mask == 1.0, 0.0, wbmtc_cv_interintra) * pop2020\n",
+    "        basin_popwgtCVInterIntra = (scipy.ndimage.sum(tempcal, basin, basin) / sum_basin_pop2020 )\n",
     "\n",
     "#################################\n",
     "#Build Basin Tables\n",
@@ -984,8 +994,6 @@
     "del df21\n",
     "del df22\n",
     "del df23\n",
-    "del df24\n",
-    "del df25\n",
     "del df\n",
     "    "
    ]
