Data directory change

--- a/SafeJustEarthSysBnd_MinAccessGW_CUNY-Griffith2022-23.ipynb
+++ b/SafeJustEarthSysBnd_MinAccessGW_CUNY-Griffith2022-23.ipynb
@@ -181,8 +181,8 @@
    "source": [
     "main = os.getcwd( ) + '/'\n",
     "\n",
-    "in_dir = str(main) + 'Model_Input/'\n",
-    "out_dir = str(main) + 'Model_Output/'\n",
+    "in_dir = str(main) + 'Data/Model_Input/'\n",
+    "out_dir = str(main) + 'Data/Model_Output/'\n",
     "\n",
     "# TCdirMain = str(in_dir) + 'TerraClimate/'\n",
     "# TCdir = str(in_dir) + 'TerraClimate/wbm/'\n",
