minor text edits

--- a/SafeJustEarthSysBnd_BlueWater.ipynb
+++ b/SafeJustEarthSysBnd_BlueWater.ipynb
@@ -8,7 +8,7 @@
     "# Safe and Just Earth Systems Boundaries for Blue Water: Safe Water Boundaries for Minimum Access and Groundwater\n",
     "\n",
     "***\n",
-    "<font color=red>Title: Safe and Just Earth Systems Boundaries for Surface Water: Safe Water Boundaries for Minimum Access and Groundwater  \n",
+    "<font color=red>Title: Safe and Just Earth Systems Boundaries for Blue Water: Safe Water Boundaries for Minimum Access and Groundwater  \n",
     "Author: Pamela A. Green  \n",
     "Date: April 19, 2023  \n",
     "\n",
