Remove email addresses

--- a/SafeJustEarthSysBnd_BlueWater.ipynb
+++ b/SafeJustEarthSysBnd_BlueWater.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "inclusive-integrity",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "peripheral-lighter",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "generic-glucose",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "radio-meeting",
    "metadata": {},
    "outputs": [],
@@ -184,8 +184,6 @@
     "in_dir = str(main) + 'Data/Model_Input/'\n",
     "out_dir = str(main) + 'Data/Model_Output/'\n",
     "\n",
-    "# TCdirMain = str(in_dir) + 'TerraClimate/'\n",
-    "# TCdir = str(in_dir) + 'TerraClimate/wbm/'\n",
     "pop_dir = str(in_dir) + 'population/'\n",
     "\n",
     "cellarea = str(in_dir) + 'landocean/CellArea_6m.tif'\n",
@@ -203,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "perfect-sharing",
    "metadata": {},
    "outputs": [],
@@ -237,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "incredible-sodium",
    "metadata": {},
    "outputs": [],
@@ -307,18 +305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "spare-essay",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Read in LTM WBM data..\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "savedQ_dir = str(in_dir) + 'OUTPUTQ_LTM/'\n",
     "\n",
@@ -357,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "hollow-auction",
    "metadata": {},
    "outputs": [],
@@ -399,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "mysterious-cherry",
    "metadata": {},
    "outputs": [],
@@ -429,12 +419,12 @@
    "source": [
     "## Import Groundwater Risk, Groundwater Recharge and Trends; convert to km3/yr and sum by basin\n",
     "\n",
-    "All Groundwater data was provided by Christopher Ndehedehe from Griffith University (c.ndehedehe@griffith.edu.au)"
+    "All Groundwater data was provided by Christopher Ndehedehe from Griffith University"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "smoking-updating",
    "metadata": {},
    "outputs": [],
@@ -523,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "optical-shannon",
    "metadata": {},
    "outputs": [],
@@ -635,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "looking-malpractice",
    "metadata": {},
    "outputs": [],
@@ -748,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "recognized-compilation",
    "metadata": {},
    "outputs": [],
@@ -994,8 +984,7 @@
     "del df21\n",
     "del df22\n",
     "del df23\n",
-    "del df\n",
-    "    "
+    "del df"
    ]
   }
  ],
